feat : add zap logging
